--- a/frontend/src/app/data-entry/party-build/party-build.component.html
+++ b/frontend/src/app/data-entry/party-build/party-build.component.html
@@ -1,9 +1,9 @@
 <header>
-  <h3>党建活动信息列表</h3>
+  <span></span>
   <button (click)="openModal(partyBuildModal)">创建信息表</button>
 </header>
 <div class="search-panel">
-  <gm-search-bar></gm-search-bar>
+  <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-party-table [columns]="columns" [communities]="communities" [data]="partyActivitiesList"></gm-party-table>
 <div class="paginator">
