--- a/frontend/src/app/data-entry/population/population.component.html
+++ b/frontend/src/app/data-entry/population/population.component.html
@@ -1,9 +1,9 @@
 <header>
-    <h3>人口信息列表</h3>
+    <span></span>
     <button (click)="openModal(populationModal)">创建信息表</button>
 </header>
 <div class="search-panel">
-    <gm-search-bar></gm-search-bar>
+    <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-population-table [columns]="columns" [communities]="communities" [data]="populationList"></gm-population-table>
 <div class="paginator">
