--- a/frontend/src/app/settings/community-manager/community-manager.component.html
+++ b/frontend/src/app/settings/community-manager/community-manager.component.html
@@ -1,9 +1,9 @@
 <header>
-  <span>社区列表</span>
+  <span></span>
   <button (click)="openModal(communityManagerModal)">创建社区</button>
 </header>
 <div class="search-panel">
-  <gm-search-bar></gm-search-bar>
+  <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-community-table [columns]="columns" [data]="communities"></gm-community-table>
 <div class="paginator">
