--- a/frontend/src/app/settings/dictionary-manager/dictionary-manager.component.html
+++ b/frontend/src/app/settings/dictionary-manager/dictionary-manager.component.html
@@ -1,5 +1,5 @@
 <header>
-  <span>字典设置</span>
+  <span></span>
   <button (click)="openModal(dictionaryEditModal)">创建字典</button>
 </header>
 <gm-dictionary-table [columns]="columns" [data]="dictionaries"></gm-dictionary-table>
