--- a/frontend/src/app/settings/external-manager/external-manager.component.html
+++ b/frontend/src/app/settings/external-manager/external-manager.component.html
@@ -1,4 +1,4 @@
 <header>
-  <span>基本设置</span>
+  <span></span>
 </header>
 <gm-external-table [columns]="columns" [data]="basicsettings"></gm-external-table>
