--- a/frontend/src/app/settings/group-manager/group-manager.component.html
+++ b/frontend/src/app/settings/group-manager/group-manager.component.html
@@ -1,9 +1,9 @@
 <header>
-  <span>用户组列表</span>
+  <span></span>
   <button (click)="openModal(groupManagerModal)">创建用户组</button>
 </header>
 <div class="search-panel">
-  <gm-search-bar></gm-search-bar>
+  <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-group-table [columns]="columns" [data]="groups"></gm-group-table>
 <div class="paginator">
