--- a/frontend/src/app/settings/logs-manager/logs-manager.component.html
+++ b/frontend/src/app/settings/logs-manager/logs-manager.component.html
@@ -1,5 +1,5 @@
 <div class="search-panel">
-  <gm-search-bar></gm-search-bar>
+  <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-log-table [columns]="columns" [data]="logs"></gm-log-table>
 <div class="paginator">
