--- a/frontend/src/app/settings/menus-manager/menus-manager.component.html
+++ b/frontend/src/app/settings/menus-manager/menus-manager.component.html
@@ -1,9 +1,9 @@
 <header>
-  <span>菜单列表</span>
+  <span></span>
   <button (click)="openModal(menuManagerModal)">创建菜单</button>
 </header>
 <div class="search-panel">
-  <gm-search-bar></gm-search-bar>
+  <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-menu-table [columns]="columns" [data]="menus"></gm-menu-table>
 
