--- a/frontend/src/app/settings/news-manager/news-manager.component.html
+++ b/frontend/src/app/settings/news-manager/news-manager.component.html
@@ -1,9 +1,9 @@
 <header>
-  <span>新闻列表</span>
+  <span></span>
   <button (click)="openModal(communityManagerModal)">添加新闻</button>
 </header>
 <div class="search-panel">
-  <gm-search-bar></gm-search-bar>
+  <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-news-table [columns]="columns" [data]="news"></gm-news-table>
 <div class="paginator">
