--- a/frontend/src/app/settings/role-manager/role-manager.component.html
+++ b/frontend/src/app/settings/role-manager/role-manager.component.html
@@ -1,9 +1,9 @@
 <header>
-  <span>角色列表</span>
+  <span></span>
   <button (click)="openModal(roleManagerModal)">创建用户</button>
 </header>
 <div class="search-panel">
-  <gm-search-bar></gm-search-bar>
+  <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-role-table [columns]="columns" [data]="roles"></gm-role-table>
 <div class="paginator">
