--- a/frontend/src/app/settings/user-manager/user-manager.component.html
+++ b/frontend/src/app/settings/user-manager/user-manager.component.html
@@ -1,9 +1,9 @@
 <header>
-  <span>用户列表</span>
+  <span></span>
   <button (click)="openModal(userManagerModal)">创建用户</button>
 </header>
 <div class="search-panel">
-  <gm-search-bar></gm-search-bar>
+  <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-user-table [columns]="columns" [data]="userList"></gm-user-table>
 
