--- a/frontend/src/styles/_lib.scss
+++ b/frontend/src/styles/_lib.scss
@@ -21,6 +21,8 @@ app-login {
   border-radius: 5px;
 
   .body {
+    padding: 10px 0;
+
     .data-item {
       display: flex;
       align-items: center;
@@ -66,6 +68,7 @@ app-login {
 .data-panel {
   @extend %table-base;
   min-height: 300px;
+  margin-top: 30px;
 
   .box {
     border: 1px solid #ccc;
@@ -116,6 +119,10 @@ app-login {
       }
     }
 
+     .page-item .page-link {
+       background: transparent;
+     }
+
      .page-item.active {
        .page-link {
          box-shadow: none;
@@ -144,4 +151,28 @@ app-login {
 .data-set {
   flex: 1;
   padding: 10px;
+}
+
+header {
+  display: flex;
+  padding: 5px 10px;
+
+  span {
+    flex: 1;
+    color: #555;
+    margin: 0;
+  }
+
+  button {
+    background: #2e68aa;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 14px;
+    padding: 5px 20px;
+  }
+}
+
+.search-panel {
+  display: flex;
+  flex-direction: row-reverse;
 }
