--- a/frontend/src/app/news/news.component.scss
+++ b/frontend/src/app/news/news.component.scss
@@ -7,17 +7,17 @@
   display: flex;
 }
 
-.right-panel {
+.news-panel {
   flex: 1;
   flex-flow: wrap;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   align-content: left;
-  height: 100%;
 
   gm-newest {
     margin: 10px;
   }
 }
+
 
