--- a/frontend/src/app/data-entry/party-build/data-editor/data-editor.component.html
+++ b/frontend/src/app/data-entry/party-build/data-editor/data-editor.component.html
@@ -71,7 +71,7 @@
   </form>
 </div>
 <ca-spinner *ngIf="isSubmitting" [state]="spinnerState" dotColor="grey">
-  <ng-container *ngIf="spinnerState === 'waiting'">Saving changes...</ng-container>
-  <ng-container *ngIf="spinnerState === 'success'">Changes have been saved successfully! Returning automatically in {{successMessageTimeoutInSeconds}} seconds.</ng-container>
-  <ng-container *ngIf="spinnerState === 'failed'">Failed to save your changes.</ng-container>
+  <ng-container *ngIf="spinnerState === 'waiting'">创建中...</ng-container>
+  <ng-container *ngIf="spinnerState === 'success'">创建成功, {{successMessageTimeoutInSeconds}} 秒跳转.</ng-container>
+  <ng-container *ngIf="spinnerState === 'failed'">创建失败</ng-container>
 </ca-spinner>
