--- a/frontend/src/app/data-entry/population/population.component.html
+++ b/frontend/src/app/data-entry/population/population.component.html
@@ -2,12 +2,16 @@
     <span></span>
     <button (click)="openModal(populationModal)">创建信息表</button>
 </header>
-<div class="search-panel">
-    <!--<gm-search-bar></gm-search-bar>-->
-</div>
-<gm-population-table [columns]="columns" [communities]="communities" [data]="populationList"></gm-population-table>
-<div class="paginator">
-  <ngb-pagination [collectionSize]="queryOptions?.totalCount" (pageChange)="search($event)" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
+<div class="flex-box">
+  <div class="search-panel">
+    <gm-search-bar #searchBar [searchData]="searchData" (searchValueChange)="query($event)"></gm-search-bar>
+  </div>
+  <div class="data-box">
+    <gm-population-table [columns]="columns" [communities]="communities" [data]="populationList"></gm-population-table>
+    <div class="paginator" *ngIf="queryOptions?.totalCount > 10">
+      <ngb-pagination [collectionSize]="queryOptions?.totalCount" (pageChange)="search($event)" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
+    </div>
+  </div>
 </div>
 <ng-template #populationModal let-close="close" let-dismiss="dismiss">
     <gm-modal-container [dismiss]="dismiss" [title]="'人口信息登记表'">
