--- a/frontend/src/app/settings/logs-manager/logs-manager.component.html
+++ b/frontend/src/app/settings/logs-manager/logs-manager.component.html
@@ -1,7 +1,13 @@
-<div class="search-panel">
-  <!--<gm-search-bar></gm-search-bar>-->
+<div class="flex-box">
+  <div class="search-panel">
+    <gm-search-bar #searchBar [searchData]="searchData" (searchValueChange)="query($event)"></gm-search-bar>
+  </div>
+  <div class="data-box">
+    <gm-log-table [columns]="columns" [data]="logs"></gm-log-table>
+    <div class="paginator" *ngIf="queryOptions?.totalCount > 10">
+      <ngb-pagination [collectionSize]="queryOptions?.totalCount" (pageChange)="search($event, searchBar.searchValue)" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
+    </div>
+  </div>
 </div>
-<gm-log-table [columns]="columns" [data]="logs"></gm-log-table>
-<div class="paginator">
-  <ngb-pagination [collectionSize]="queryOptions?.totalCount" (pageChange)="search($event)" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
-</div>
+
+
