--- a/frontend/src/app/settings/news-manager/news-manager.component.html
+++ b/frontend/src/app/settings/news-manager/news-manager.component.html
@@ -2,12 +2,16 @@
   <span></span>
   <button (click)="openModal(communityManagerModal)">添加新闻</button>
 </header>
-<div class="search-panel">
-  <!--<gm-search-bar></gm-search-bar>-->
-</div>
-<gm-news-table [columns]="columns" [data]="news"></gm-news-table>
-<div class="paginator">
-  <ngb-pagination [collectionSize]="queryOptions?.totalCount" (pageChange)="search($event)" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
+<div class="flex-box">
+  <div class="search-panel">
+    <gm-search-bar #searchBar [searchData]="searchData" (searchValueChange)="query($event)"></gm-search-bar>
+  </div>
+  <div class="data-box">
+    <gm-news-table [columns]="columns" [data]="news"></gm-news-table>
+    <div class="paginator" *ngIf="queryOptions?.totalCount > 10">
+      <ngb-pagination [collectionSize]="queryOptions?.totalCount" (pageChange)="search($event)" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
+    </div>
+  </div>
 </div>
 <ng-template #communityManagerModal let-close="close" let-dismiss="dismiss">
   <gm-modal-container title="创建新闻" [dismiss]="dismiss">
