--- a/frontend/src/app/settings/user-manager/user-manager.component.html
+++ b/frontend/src/app/settings/user-manager/user-manager.component.html
@@ -3,7 +3,7 @@
   <button (click)="openModal(userManagerModal)">创建用户</button>
 </header>
 <div class="search-panel">
-  <!--<gm-search-bar></gm-search-bar>-->
+  <!--<gm-search-bar #searchBar [searchData]="searchData" (searchValueChange)="query($event)"></gm-search-bar>-->
 </div>
 <gm-user-table [columns]="columns" [data]="userList"></gm-user-table>
 
