--- a/frontend/src/app/shared/components/menu/menu-option/option.component.scss
+++ b/frontend/src/app/shared/components/menu/menu-option/option.component.scss
@@ -8,16 +8,19 @@
 
 .sub-menu-options {
   display: block;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 
   gm-menu-option {
     padding: 20px 0;
     width: $menu-width;
 
     &:hover {
-      background: #17232f;
+      background: rgba(0, 0, 0, .08);
     }
   }
 
   position: absolute;
-  background: rgba(44, 62, 80, 0.9);
+  z-index: 1000;
+  background: #fff;
 }
