--- a/frontend/src/styles/_lib.scss
+++ b/frontend/src/styles/_lib.scss
@@ -68,7 +68,6 @@ app-login {
 .data-panel {
   @extend %table-base;
   min-height: 300px;
-  margin-top: 30px;
 
   .box {
     border: 1px solid #ccc;
@@ -143,6 +142,16 @@ app-login {
   }
 }
 
+.flex-box {
+  display: flex;
+  align-items: baseline;
+  margin-top: 30px;
+
+  .data-box {
+    flex: 1;
+  }
+}
+
 .data-entry-panel {
   display: flex;
   height: 100%;
@@ -175,4 +184,13 @@ header {
 .search-panel {
   display: flex;
   flex-direction: row-reverse;
+}
+
+.input-group-append {
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+  font-size: 1.5rem;
+  position: absolute;
+  right: -10px;
 }
