--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -5,7 +5,13 @@
         </div>
         <h1 class="caption">党群管理系统</h1>
         <div class="menus">
-            <span class="c-li"><fa-icon [icon]="faUserCircle"></fa-icon>{{ data?.name }}</span>
+            <span class="c-li">
+              <fa-icon [icon]="faUserCircle" (click)="showAvatar = !showAvatar"></fa-icon>
+              <div class="avatar-panel" *ngIf="showAvatar" (mouseleave)="showAvatar = false">
+                <a href routerLink="/settings/reset">修改密码</a>
+              </div>
+              {{ data?.name }}
+            </span>
             <!--<span class="c-li msg-bell">
                 <fa-icon [icon]="faBell"></fa-icon>
                 <div class="msg">8</div>
