--- a/frontend/src/app/shared/components/header/header.component.scss
+++ b/frontend/src/app/shared/components/header/header.component.scss
@@ -43,6 +43,20 @@ header {
 
         .c-li {
             margin: 0 20px;
+            position: relative;
+            cursor: pointer;
+
+          .avatar-panel {
+            height: 60px;
+            position: absolute;
+            right: -10px;
+            top: 0;
+            border-radius: 5px;
+            z-index: 100;
+            padding: 5px 10px;
+            box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.4);
+            background: #fff;
+          }
         }
 
         .msg-bell {
