--- a/frontend/src/app/settings/account/reset-password/reset-password.component.html
+++ b/frontend/src/app/settings/account/reset-password/reset-password.component.html
@@ -11,7 +11,7 @@
         <div class="form-group wrap">
           <label>当前密码</label>
           <input type="password" name="password" class="form-control" minlength="8" formControlName="currentPassword" placeholder="当前密码" caValidityClass>
-          <small *ngIf="getControl('currentPassword').dirty && !getControl('currentPassword').hasError('required') && (getControl('currentPassword').hasError('minLength') || getControl('newPassword').hasError('pattern'))" class="invalid-feedback">
+          <small *ngIf="!getControl('currentPassword').hasError('required') && (getControl('currentPassword').hasError('minLength') || getControl('newPassword').hasError('pattern'))" class="invalid-feedback">
             密码格式错误，请输入至少8位字符，至少一位大写字母。
           </small>
           <small *ngIf="getControl('currentPassword').dirty && getControl('currentPassword').hasError('required')" class="invalid-feedback">
@@ -21,7 +21,7 @@
         <div class="form-group wrap">
           <label>新密码</label>
           <input type="password" name="newPassword" class="form-control" minlength="8" formControlName="newPassword" placeholder="新密码(最少8位，至少包含一位大个字母)" caValidityClass>
-          <small *ngIf="getControl('currentPassword').dirty && !getControl('newPassword').hasError('required') && (getControl('newPassword').hasError('minLength') || getControl('newPassword').hasError('pattern'))" class="invalid-feedback">
+          <small *ngIf="!getControl('newPassword').hasError('required') && (getControl('newPassword').hasError('minLength') || getControl('newPassword').hasError('pattern'))" class="invalid-feedback">
             密码格式错误，请输入至少8位字符，至少一位大写字母。
           </small>
           <small *ngIf="getControl('newPassword').dirty && getControl('newPassword').hasError('required')" class="invalid-feedback">
