--- a/frontend/src/app/settings/external-manager/data-editor/data-editor.component.html
+++ b/frontend/src/app/settings/external-manager/data-editor/data-editor.component.html
@@ -4,30 +4,45 @@
       <div class="wrap">
         <label>系统名称</label>
         <input type="text" class="form-control" formControlName="name" caValidityClass/>
+        <small *ngIf="getControl('name').hasError('required')" class="invalid-feedback">
+          必填项.
+        </small>
       </div>
     </div>
     <div class="form-group">
       <div class="wrap">
         <label>外接程序路径</label>
         <input type="text" class="form-control" formControlName="outSoftwarePath" caValidityClass/>
+        <small *ngIf="getControl('outSoftwarePath').hasError('required')" class="invalid-feedback">
+          必填项.
+        </small>
       </div>
     </div>
     <div class="form-group">
       <div class="wrap">
         <label>文件路径</label>
         <input type="text" class="form-control" formControlName="filePath" caValidityClass/>
+        <small *ngIf="getControl('filePath').hasError('required')" class="invalid-feedback">
+          必填项.
+        </small>
       </div>
     </div>
     <div class="form-group">
       <div class="wrap">
         <label>日志路径</label>
         <input type="text" class="form-control" formControlName="logPath" caValidityClass/>
+        <small *ngIf="getControl('logPath').hasError('required')" class="invalid-feedback">
+          必填项.
+        </small>
       </div>
     </div>
     <div class="form-group">
       <div class="wrap">
         <label>文件上限</label>
         <input type="number" class="form-control" formControlName="fileMaxSize" caValidityClass/>
+        <small *ngIf="getControl('fileMaxSize').hasError('required')" class="invalid-feedback">
+          必填项.
+        </small>
       </div>
     </div>
     <div class="modal-buttons">
