--- a/frontend/src/app/settings/news-manager/create/create.component.html
+++ b/frontend/src/app/settings/news-manager/create/create.component.html
@@ -3,13 +3,16 @@
     <div class="wrapper">
       <label>新闻名称</label>
       <input type="text" class="form-control" placeholder="" formControlName="title" caValidityClass required/>
+      <small *ngIf="getControl('title').hasError('pattern')" class="invalid-feedback">
+        名称格式错误.
+      </small>
+      <small *ngIf="getControl('title').hasError('maxLength')" class="invalid-feedback">
+        最大长度不能超过{{ titleLengthLimit }}.
+      </small>
+      <small *ngIf="getControl('title').hasError('required')" class="invalid-feedback">
+        必填项.
+      </small>
     </div>
-    <small *ngIf="formGroup.get('title').hasError('pattern')" class="invalid-feedback">
-      Invalid title.
-    </small>
-    <small *ngIf="formGroup.get('title').dirty && formGroup.get('title').hasError('required')" class="invalid-feedback">
-      Required field.
-    </small>
   </div>
   <div class="modal-buttons">
     <button type="submit" class="btn btn-primary">Save</button>
