--- a/frontend/src/app/settings/role-manager/role-manager.component.html
+++ b/frontend/src/app/settings/role-manager/role-manager.component.html
@@ -1,12 +1,12 @@
 <header>
   <span></span>
-  <button (click)="openModal(roleManagerModal)">创建用户</button>
+  <button (click)="openModal(roleManagerModal)">创建角色</button>
 </header>
 <div class="search-panel">
   <!--<gm-search-bar></gm-search-bar>-->
 </div>
 <gm-role-table [columns]="columns" [data]="roles"></gm-role-table>
-<div class="paginator">
+<div class="paginator" *ngIf="queryOptions?.totalCount > 10">
   <ngb-pagination [collectionSize]="queryOptions?.totalCount" (pageChange)="search($event)" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
 </div>
 <ng-template #roleManagerModal let-close="close" let-dismiss="dismiss">
